# CCprimer5

src/1/: CMakeLists.txt  add.cpp
src/1/Executable_Output/: CMakeCXXCompilerId  add  add_item  add_item2  avg_price  for_ex  forcount  item_io  main_only  mysum  occurs  whilecount
src/1/data/: book_sales
src/2/: CMakeLists.txt
src/2/Executable_Output/: CMakeCXXCompilerId  Sales_data  compounddecls  convs  dbl_ptr  decl-ex  escape  inits  literals  ref-ex  scope_levels  unsigned
